# DQN-experiments

./: .gitignore  DQNAgent.py  README.md  TODO:  agent.py  agentDQN.py  cfg.py  conda_env.yml  dumper.py  env.py  experiment.py  log.py  main.py  memory.py  original_config.json  pyproject.toml  utils.py
DQN/: DQNAgent.py  exploration.py  network.py  replay_buffer.py  test.py  vect_memory.py  vect_replay_buffer.py
da_integrare/: env.py  exploration.py
drl_framework/: agent.py  dumper.py  env.py  experiment.py
drl_framework/original_config/: DqnAgent.yml  cfg_agent.yml  cfg_dumper.yml  cfg_env.yml  cfg_experiment.yml  cfg_logger.yml  dqn_net_cfg.yml  exploration_cfg.yml  replay_cfg.yml  train_cfg.yml
src/drlux_toolbox/: main.py
src/drlux_toolbox/agents/: random_agent.py
src/drlux_toolbox/agents/exploration_stategy/: stategy.py
src/drlux_toolbox/input/original_config/classic_control_env/: envConfig.yml  experimentConfig.yml
src/drlux_toolbox/metaclasses/: agent.py  config.py  dumper.py  env.py  experiment.py
src/drlux_toolbox/output/data/results/20220418_194709/config/: envConfig.yml  experimentConfig.yml
src/drlux_toolbox/output/data/results/20220418_194740/config/: agentConfig.yml
src/drlux_toolbox/toolbox/: config_manager.py  vectorDumpr.py
src/drlux_toolbox/toolbox/agents/: random_agent.py
src/drlux_toolbox/toolbox/envs/: classic_control_env.py
src/drlux_toolbox/utils/: profiler.py
tests/: test_drlux_toolbox.py
utils/: cfg.py  log.py  logger.py  utils.py
